# SharedTest

./: .gitignore  CMakeLists.txt  README.md
src/: .clang-format  CMakeLists.txt
src/MyExe/: CMakeLists.txt  README.md
src/MyExe/src/: main.cpp
src/MySharedLib/: CMakeLists.txt  README.md
src/MySharedLib/include/public/MySharedLib/: Animal.h  Bird.h  Component.h  ComponentA.h  MySharedLib.h  System.h  Tiger.h
src/MySharedLib/src/: Animal.cpp  Bird.cpp  Component.cpp  ComponentA.cpp  System.cpp  Tiger.cpp
